# prompt-build-tool-for-LLMs

./: .gitignore  ARCHITECTURE.md  CONTRIBUTE.md  README.md  backlog.md  cli_helpful_type_hints.py  cli_vscode_settings.py  pyproject.toml
example_test_run/: example_article.md
example_test_run/models/: article.prompt  client.py
example_test_run/models/2_article/: article.prompt
example_test_run/tests/: topic_has_title.prompt
examples/dynamic_web_page/: client.py
examples/dynamic_web_page/models/: articles.prompt  summaries.prompt
examples/dynamic_web_page/tests/: summary_has_bullets.prompt
examples/generate_articles_example/: basic-usage.md
examples/programatic/: example_programatic_run.py
examples/pyodide_smoke/: README.md  index.html  main.py  pyscript.json
examples/pyodide_wheel_smoke/: pyscript.json
generate_articles_example/models/: article.prompt  client.py  summary.prompt
generate_articles_example/outputs/: article.md  summary.md
generate_articles_example/tests/: summary_has_bullets.prompt
generate_articles_example/validation/: article.py
pbt/: __init__.py  cli.py  db.py  docs.py  executor.py  graph.py  llm.py  parser.py  tester.py  type_hints.py  types.py  validator.py
pbt/cli/: __init__.py  init_files.py  type_hints.py
pbt/executor/: __init__.py  executor.py  graph.py  model_constructs.py  parser.py
pbt/server/: app.py
tests/: conftest.py  test_commands.py  test_init.py  test_run.py
utils/dnd-front-end/: index.html  package.json  tailwind.config.js  vite.config.ts
utils/dnd-front-end/src/: App.tsx  (+3 more)
utils/server/: app.py
(+33 files in other folders)
