[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-build-tool"
version = "0.1.13"
description = "A dbt-inspired prompt orchestration tool for LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "networkx>=3.0",
    "rich>=13.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
pbt = "pbt.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pbt*"]

[dependency-groups]
dev = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "openai>=2.26.0",
    "python-multipart>=0.0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
